[gd_scene load_steps=7 format=3 uid="uid://roqlrlkadytg"]

[ext_resource type="Script" path="res://scenes/dungeon/room/room.gd" id="1_h7wlk"]
[ext_resource type="Texture2D" uid="uid://b4s4omovqtc3n" path="res://scenes/dungeon/room/rooms_spritesheet.png" id="1_soe6j"]
[ext_resource type="PackedScene" uid="uid://bf8norsymi3b1" path="res://scenes/dungeon/room/room_door.tscn" id="2_xhxc8"]
[ext_resource type="PackedScene" uid="uid://bnk0b67w37i4a" path="res://scenes/dungeon/room/exit_hatch.tscn" id="4_ph10a"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gr2jb"]
resource_name = "room_tileset"
texture = ExtResource("1_soe6j")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 1, 1.00226, 1.05794, 1.01647, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 1, -8, 1)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -0.875, 8, -1.125, 1, -8, 1)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 0.875, -8, 0.875, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-1, -8, 8, -8, 8, 8, -0.875, 8)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -1, 8, 8, -8, 8, -8, -8, 0.875, -8, 1.125, -1)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -1, 8, 8, -8, 8, -8, -1)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-1, -8, 8, -8, 8, 8, -8, 8, -8, -1, -1, -1.25)

[sub_resource type="TileSet" id="TileSet_cfyo5"]
physics_layer_0/collision_layer = 16
physics_layer_0/collision_mask = 35
sources/0 = SubResource("TileSetAtlasSource_gr2jb")

[node name="Room" type="Node2D" node_paths=PackedStringArray("exit_hatch")]
script = ExtResource("1_h7wlk")
exit_hatch = NodePath("ExitHatch")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-72, -40)
tile_set = SubResource("TileSet_cfyo5")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 0, 0, -65536, 65536, 0, -65535, 65536, 0, -65534, 65536, 0, -65533, 65536, 0, -65532, 65536, 0, -65531, 65536, 0, -65530, 65536, 0, 65535, 0, 1, 131071, 0, 1, 196607, 0, 1, 262143, 0, 1, 393215, 0, 2, 327679, 0, 1, 327680, 65536, 2, 327681, 65536, 2, 327682, 65536, 2, 327683, 65536, 2, 327684, 65536, 2, 327685, 65536, 2, 327686, 65536, 2, 327687, 65536, 2, 327688, 65536, 2, 327689, 131072, 2, 262153, 131072, 1, 196617, 131072, 1, 131081, 131072, 1, 65545, 131072, 1, 9, 131072, 1, -65527, 131072, 0, -65529, 65536, 0, -65528, 65536, 0, 0, 65536, 1, 1, 65536, 1, 2, 65536, 1, 65537, 65536, 1, 65536, 65536, 1, 131072, 65536, 1, 196608, 65536, 1, 196609, 65536, 1, 131073, 65536, 1, 262144, 65536, 1, 262145, 65536, 1, 262146, 65536, 1, 262147, 65536, 1, 262148, 65536, 1, 262149, 65536, 1, 262150, 65536, 1, 262151, 65536, 1, 262152, 65536, 1, 196616, 65536, 1, 196615, 65536, 1, 196614, 65536, 1, 196613, 65536, 1, 131076, 65536, 1, 131075, 65536, 1, 131074, 65536, 1, 196610, 65536, 1, 196611, 65536, 1, 196612, 65536, 1, 65539, 65536, 1, 65538, 65536, 1, 65540, 65536, 1, 65541, 65536, 1, 131077, 65536, 1, 3, 65536, 1, 4, 65536, 1, 5, 65536, 1, 6, 65536, 1, 7, 65536, 1, 65543, 65536, 1, 131079, 65536, 1, 131078, 65536, 1, 65542, 65536, 1, 8, 65536, 1, 65544, 65536, 1, 131080, 65536, 1)

[node name="DoorsHolder" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(-72, -40)

[node name="RoomDoor" parent="DoorsHolder" instance=ExtResource("2_xhxc8")]
position = Vector2(72, -11)
corresponding_neighbor_dir = "t"

[node name="RoomDoor2" parent="DoorsHolder" instance=ExtResource("2_xhxc8")]
position = Vector2(-12, 40)
rotation = -1.57079
corresponding_neighbor_dir = "l"

[node name="RoomDoor3" parent="DoorsHolder" instance=ExtResource("2_xhxc8")]
position = Vector2(72, 92)
rotation = -3.14159
corresponding_neighbor_dir = "b"

[node name="RoomDoor4" parent="DoorsHolder" instance=ExtResource("2_xhxc8")]
position = Vector2(156, 40)
rotation = -4.71238
corresponding_neighbor_dir = "r"

[node name="RoomSpawnPointsHolder" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="t" type="Marker2D" parent="RoomSpawnPointsHolder"]
position = Vector2(0, -128)

[node name="r" type="Marker2D" parent="RoomSpawnPointsHolder"]
position = Vector2(192, 0)

[node name="b" type="Marker2D" parent="RoomSpawnPointsHolder"]
position = Vector2(0, 128)

[node name="l" type="Marker2D" parent="RoomSpawnPointsHolder"]
position = Vector2(-192, 0)

[node name="ExitHatch" parent="." instance=ExtResource("4_ph10a")]
